# Quest-XR

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle  build.gradle.kts
app/cpp/: CMakeLists.txt  check.h  common.h  geometry.h  graphics_plugin.hpp  graphics_plugin_vulkan.cpp  graphicsapi.h  graphicsplugin.h  graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  main.cpp  math_utils.h  openxr-include.h  openxr-include.hpp  openxr_program.cpp  openxr_program.h  openxr_program.hpp  openxr_utils.cpp  openxr_utils.hpp  options.h  platform.hpp  platform_android.cpp  platform_data.hpp  platformdata.h  platformplugin.h  platformplugin_android.cpp  platformplugin_factory.cpp  vulkan_swapchain_context.cpp  vulkan_swapchain_context.hpp  xr_linear.h
app/cpp/logger/: CMakeLists.txt  logger.hpp
app/cpp/shaders/: CMakeLists.txt  generate-spv.sh  shaders.cpp  shaders.hpp  vert.glsl
app/cpp/shaders/glsl460/: frag.glsl  vert.glsl
app/cpp/utils/: CMakeLists.txt  compiler.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp  variant_utils.hpp
app/cpp/vulkan/: CMakeLists.txt  data_type.cpp  data_type.hpp  redering_pipeline_config.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_rendering_context.cpp  vulkan_rendering_context.hpp  vulkan_rendering_pipeline.cpp  vulkan_rendering_pipeline.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_utils.cpp  vulkan_utils.hpp
app/meta_quest_openxr_loader/: CMakeLists.txt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: check.h  graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  openxr_program.cpp  pch.h  platformdata.h  platformplugin_android.cpp  platformplugin_factory.cpp  xr_linear.h
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
gradle/wrapper/: gradle-wrapper.properties
